[package]
name = "hoe"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A hoe to help manage your personal digital garden"
repository = "https://github.com/kylechamberlin/hoe"
homepage = "https://docs.rs/hoe"
readme = "README.md"

[[bin]]
name = "hoe"
path = "src/main.rs"

[lib]
name = "hoe_lib"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.0", features = ["derive", "env", "string"] }
color-eyre = "0.6.2"
ctrlc = { version = "3.2.4", features = ["termination"] }
inquire = { version = "0.5.3", features = ["editor", "tempfile"] }
slugify = "0.1.0"
tera = "1.17.1"

[profile.release]
strip = true
lto = true
